--- a/app/src/main/res/layout/activity_customer_input.xml
+++ b/app/src/main/res/layout/activity_customer_input.xml
@@ -28,7 +28,7 @@
 
     <Button
         android:id="@+id/save_button"
-        android:layout_width="310dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="저장" />
 </LinearLayout>
